--- a/app/web/index.html
+++ b/app/web/index.html
@@ -31,6 +31,15 @@
 
   <title>app</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Telegram Web App SDK -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script>
+    if (window.Telegram && window.Telegram.WebApp) {
+      window.Telegram.WebApp.expand();
+      window.Telegram.WebApp.disableVerticalSwipes();
+    }
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
