--- a/app/web/index.html
+++ b/app/web/index.html
@@ -32,6 +32,15 @@
   <title>app</title>
   <link rel="manifest" href="manifest.json">
   
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+  </style>
+  
   <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
